--- a/cssgpt.css
+++ b/cssgpt.css
@@ -8,6 +8,14 @@ html {
   scroll-behavior: smooth;
 }
 
+#banner {
+    margin: 40vh 25em;
+}
+
+.p-estrella {
+    color: #ffd700;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #000;
@@ -29,7 +37,7 @@ header {
 #navbar {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; 
 }
 
 #navbar ul {
@@ -38,17 +46,25 @@ header {
 }
 
 #navbar ul li {
-    margin-right: 10px;
+    margin-left: 50px;
+    align-items: center;
 }
 
 #navbar ul li a {
     color: #fff;
     text-decoration: none;
-    transition: color .7s ease-in-out;
+    transition: color .4s ease-in-out;
 }
 
 #navbar ul li a:hover {
     color: #f00;
+}
+
+.img-logo--nav {
+    width: 30px;
+    height: 30px;
+    border: 50%;
+    border-radius: 50%;
 }
 
 section {
@@ -113,6 +129,7 @@ section #artist h2 {
 }
 
 .contact-form form input,
+
 .contact-form form textarea {
     width: 100%;
     margin-bottom: 10px;
@@ -136,4 +153,17 @@ footer {
     color: #fff;
     padding: 10px;
     text-align: center;
+}
+ 
+@media screen and (max-width: 650px) {
+  /* Estilos específicos para pantallas pequeñas */
+
+  .body-container {
+    width: 90%;
+    margin: 0 auto;
+  }
+  
+  #inavbar {
+    background-color: #f00
+  } 
 }
