--- a/estilo.css
+++ b/estilo.css
@@ -43,6 +43,7 @@ header {
     background-color: #000;
     margin: -10px -10px; 
     box-shadow: #444 0 3px;
+    align-items: center;
 } 
  
 
@@ -54,7 +55,6 @@ header {
 
 #navbar ul li {
     margin-left: 30px;
-    align-items: center;
     font-size: 20px;
 }
 
@@ -79,11 +79,10 @@ section {
 }
 
 #banner {
-    margin-top: 55px; 
+    margin: 60px;  
     color: #fff;
     font-size: 30px; 
-    text-align: center;
-    padding-bottom: cal(80vh -500px); 
+    text-align: center;  
     transition: color .4s ease-in-out; 
     background-size: cover;
 }  
@@ -94,6 +93,7 @@ section {
 
 .img-logo--banner {
     width: 400px; 
+    margin-top: 20px;
 } 
 
 #presentacion {
@@ -156,20 +156,16 @@ section {
     margin: 10px;
 }
 
-#h2-pm {
-    display: inline-block;
+#h2-pm { 
     color: #f00;
-    margin: 50px;
-    padding: 30px;
-    width: 20px;
-    height: 20px;
+    margin-left: 37vw;
 }
 
 #h2-catalog {
-    position: absolute;
-    display: flex;
-    margin-left: 37.5vw; 
-    margin-top: -8vh;
+    display: flex; 
+    margin-left: 37vw;
+    margin-top: -10px;
+    height: 100px; 
     color: #f00;
 }
 
@@ -183,11 +179,11 @@ section {
 }
 
 #catalog ul li {
-    margin : 20px 0;
+    margin : 10px 0;
     border-top: 1px solid #f00; 
     display: flex;  
     font-size: 20px;
-    padding: 0 40vw;  
+    padding: 10px 40vw;  
 }
 
 #catalog ul a { 
@@ -241,7 +237,12 @@ section {
 .contact-form h3 {
     margin-bottom: 10px;
 }
- 
+
+#selecionar {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 5px;
+}
 
 .contact-form form textarea {
     width: 100%;
@@ -267,79 +268,20 @@ section {
     background-color: #d50000;
 }
 
+#whatsapp {
+    position: absolute; 
+    margin: -1px 120px; 
+    padding: 8px 20px;
+    text-decoration: none;
+    background-color: #04852a;
+    font-size: 17px;
+
+}
+
 footer {
     background-color: #000;
     color: #fff;
     padding: 10px;
     text-align: center;
 }
- 
-#check {
-    font-size: 50px;
-    color: #fff;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    cursor: pointer;
-    display: none;
-}
-
-}
-
-@media screen and(max-width: 700px) {
-  /* Estilos específicos para pantallas pequeñas */
-   
-
-  .checkbtn {
-    display: block;
-    height: 3em;
-  }
-
-  ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #d50000;
-    top: 80px;
-    left: -110%;
-    text-align: center;
-    transition: all .5s;
-  }
-
-  nav { 
-    height: 5em;
-    width: 100vw;
-    background-color: #000;
-  }
-  
-  nav ul li{
-    display: block;
-    margin: 50px 0;
-    line-height: 30px; 
-  }
-
-  nav ul li a {
-    font-size: 20px;
-
-  }
-
-  li a:hover, li a:active {
-    background: none;
-    color: #000;
-  }
-
-  #check:checked ~ ul{
-    left: 0;
-  }
-  
-  .artist {
-    display: block;
-    width: 20em;
-  }
- 
-  .artist img {
-
-    width: 100%;
-  }
-  
 }
