--- a/estilo.css
+++ b/estilo.css
@@ -246,8 +246,13 @@ section {
 
 .contact-form form textarea {
     width: 100%;
+    height: 50px;
     margin-bottom: 10px;
     padding: 5px;
+    min-width: 400px;
+    max-width: 400px;
+    min-height: 50px;
+    max-height: 100px;
 }
 
 .contact-form form button {
