--- a/estilo.css
+++ b/estilo.css
@@ -1,8 +1,4 @@
-/* Reset CSS */
-
-@media screen and (min-width: 100vw) {
-    
-
+ 
 
 * {
     margin: 0;
@@ -85,10 +81,43 @@ section {
     text-align: center;  
     transition: color .4s ease-in-out; 
     background-size: cover;
+    animation: glicht 2.3s infinite;
+
 }  
 
 #p-banner {
     font-size: 40px;
+    animation: glicht 2.3s infinite;
+}
+
+@keyframes glicht {
+    0% {
+        text-shadow: #b4cf06
+        0px 0px, 
+        #0d22da 0px 0px;
+    }
+    10% {
+        text-shadow: #f00
+        -5px 2px, 
+        #0d22da 0px 0px;
+    }
+    35% {
+        text-shadow: #f00
+        0px 0px, 
+        #0d22da 5px -2px;
+    }
+    60% {
+        text-shadow: #f00
+        0px 0px, 
+        #0d22da 0px 0px;
+    } 
+
+    100% {
+        text-shadow: #f00
+        0px 0px, 
+        #0d22da 0px 0px;
+    } 
+
 }
 
 .img-logo--banner {
@@ -116,17 +145,16 @@ section {
 }
 
 .div-pm { 
-    margin: 100px 50px;
+    margin: 80px 50px;
     border: 1px solid #f00;
-    padding: 10px;
-    border-radius: 5px;
+    padding: 10px; 
     text-align: center;
 }
 
-#h2-pm {
-    display: inline-block;
-    margin: 30px auto;
-    padding: 15px;
+#h2-pm { 
+    display: flex;
+    margin: 10px auto; 
+    font-size: 38px;
 }
 
 #h3-pm {
@@ -139,6 +167,32 @@ section {
 #p-pm{
     color: #fff;
     margin: 20px;
+    padding:10px;
+    width: 350px;
+
+}
+
+.div-pm-2 { 
+    margin: 80px 50px; 
+    border: 1px solid #f00;
+    padding: 10px 90px; 
+    text-align: center; 
+    height: 270px;
+}
+
+#h3-pm-2 {
+    position: absolute;
+    color: #fff;
+    margin: 20px; 
+    padding: 10px; 
+    width: 80%;
+    margin-right: 0;
+}
+
+#p-pm-2 {
+    position: absolute;
+    color: #fff;
+    margin: 20px; 
     padding:10px;
     width: 350px;
 
@@ -163,7 +217,7 @@ section {
 
 #h2-catalog {
     display: flex; 
-    margin-left: 37vw;
+    margin-left: 38vw;
     margin-top: -10px;
     height: 100px; 
     color: #f00;
@@ -192,46 +246,29 @@ section {
     margin: 10px 15px;
     font-size: 15px;
     text-decoration: none;
-}
-
-#h2-na { 
-    position: absolute;
-    display: flex;
-    margin-left: 40vw;
-    margin-top: -4vh;
-    color: #f00;
-}
-
-#artists {
-    min-width: 700px;
-    display: flex;
-    background-color: #000;
-    color: #f00;
-}
-
-.artist { 
-    margin: 100px 50px;
-    border: 1px solid #f00;
-    padding: 10px;
-    border-radius: 5px;
-    text-align: center;
-}
-
-.artist img { 
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    margin-bottom: 10px;
-}
+} 
 
 #contact {
     background-color: #000;
-    color: #f00;
+    color: #f00; 
+}
+
+#h4-container {
+    position: absolute;
+    color: #fff;
+    margin: 10px 10px;
+}
+
+h4 {
+    padding: 23px 10px;
+    font-size: 22px;
+    animation: glicht 2s infinite;
 }
 
 .contact-form {
     max-width: 400px;
     margin: 0 auto;
+    padding-left: 20px;
 }
 
 .contact-form h3 {
@@ -249,8 +286,8 @@ section {
     height: 50px;
     margin-bottom: 10px;
     padding: 5px;
-    min-width: 400px;
-    max-width: 400px;
+    min-width: 380px;
+    max-width: 3800px;
     min-height: 50px;
     max-height: 100px;
 }
@@ -275,7 +312,7 @@ section {
 
 #whatsapp {
     position: absolute; 
-    margin: -1px 50px; 
+    margin: -1px 30px; 
     padding: 8px 20px;
     text-decoration: none;
     background-color: #04852a;
@@ -289,22 +326,16 @@ section {
 
 #whatsapp-icon {
     position: absolute; 
-    margin: -10px 250px; 
+    margin: -10px 230px; 
     padding: 8px 20px;
     width: 90px;
     border-radius: 50%;
-    rotate: 10deg;
-    transition: all 1s;  
-} 
-
-#whatsapp-icon:hover {
-    transform: rotate(40deg);
-}
+    rotate: 10deg; 
+}  
 
 footer {
     background-color: #000;
     color: #fff;
     padding: 10px;
     text-align: center;
-}
 }
