--- a/estilo.css
+++ b/estilo.css
@@ -14,6 +14,10 @@ html {
     color: #ffd700;
 }
 
+.hamburger {
+    display: none;
+}
+
 body {
     font-family: Arial, sans-serif; 
     background-color: #000;
@@ -60,8 +64,9 @@ header {
     transition: color .4s ease-in-out;
 }
 
-#navbar ul li a:hover {
-    color: #f00;
+#navbar ul li a:hover { 
+    color: #666;
+    animation: glicht 2.3s infinite;
 }
 
 .img-logo--nav {
@@ -75,7 +80,7 @@ section {
 }
 
 #banner {
-    margin: 60px;  
+    margin: 100px 60px;  
     color: #fff;
     font-size: 30px; 
     text-align: center;  
@@ -122,7 +127,7 @@ section {
 
 .img-logo--banner {
     width: 400px; 
-    margin-top: 20px;
+    margin-top: 80px;
 } 
 
 #presentacion {
@@ -145,6 +150,7 @@ section {
 }
 
 .div-pm { 
+    display: flex;
     margin: 80px 50px;
     border: 1px solid #f00;
     padding: 10px; 
@@ -152,67 +158,131 @@ section {
 }
 
 #h2-pm { 
-    display: flex;
-    margin: 10px auto; 
+    display: inline-block;
+    margin: 10px; 
     font-size: 38px;
 }
 
-#h3-pm {
+#h3-pm { 
     color: #fff;
-    margin: 20px;
-    padding: 10px;
-    width: 350px;
+    margin: 20px 0 0 0;
+    padding: 10px 50px; 
+    width: 50vw; 
 }
 
 #p-pm{
+    position: absolute;
     color: #fff;
-    margin: 20px;
-    padding:10px;
-    width: 350px;
+    margin: 100px 500px 0 0;
+    padding: 10px 100px;  
+    max-width: 50vw;
+    width: 50vw;
 
 }
 
+#foto-pm {   
+    float: right; 
+    max-width: 500px;   
+    right: 0%;
+}
+
 .div-pm-2 { 
-    margin: 80px 50px; 
-    border: 1px solid #f00;
-    padding: 10px 90px; 
+    display: flex;
     text-align: center; 
+    border: 1px solid #f00;
+    margin: 80px 50px; 
+    padding: 10px 90px; 
     height: 270px;
 }
 
 #h3-pm-2 {
-    position: absolute;
     color: #fff;
-    margin: 20px; 
-    padding: 10px; 
-    width: 80%;
-    margin-right: 0;
-}
-
-#p-pm-2 {
-    position: absolute;
-    color: #fff;
-    margin: 20px; 
-    padding:10px;
-    width: 350px;
-
-}
-
-#registro {
-    display: inline-block;
-    color: #fff;
-    margin: 50px;
-    padding: 30px;
+    margin: 20px 500px 0 200px;
+    padding: 10px 50px 0 50px; 
     width: 50vw; 
 }
 
-#p-registro {
-    margin: 10px;
+#p-pm-2 {
+    display: flex;
+    position: absolute;
+    color: #fff;   
+    float: right; 
+    max-width: 30%;
+
 }
+
+#foto-2-pm {
+    float: left;
+    max-width: 500px;
+    margin: 0;
+}
+
+#serviyregistro h2 {
+    display: inline-block;
+    color: #f00;
+    font-size: 35px;
+    margin: -10px 0 80px 0;
+    padding: 30px;
+    border-bottom: 1px solid #d50000;
+}
+
+#container-serviyregistro {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 100%;
+    margin: 0 auto;
+    color: #f00;
+}
+
+#serviyregistro div div {  
+    margin: 10px;
+    padding: 10px;  
+    border: 2px solid #d50000;
+    font-size: 20px;
+}
+ 
 
 #h2-pm { 
     color: #f00;
-    margin-left: 37vw;
+    margin-left: 36vw;
+}
+
+#section-pa div {
+    color: #fff;
+    display: flex;
+}
+ 
+#h2-pa {
+    display: block;
+    color: #f00;
+    margin: 0 0 0 36%;
+    padding: 100px 0;
+    font-size: 38px;
+}
+
+#div-pa { 
+    color: #fff;
+    border: 1px solid #d50000;
+    margin: 50px;
+    padding: 50px;
+    width: 30%;
+}
+
+#div-pa-2 { 
+    color: #fff;
+    border: 1px solid #d50000;
+    margin: 50px;
+    padding: 50px;
+    width: 30%;
+}
+
+#div-pa-3 { 
+    color: #fff;
+    border: 1px solid #d50000;
+    margin: 50px;
+    padding: 50px;
+    width: 30%;
 }
 
 #h2-catalog {
@@ -237,13 +307,17 @@ section {
     border-top: 1px solid #f00; 
     display: flex;  
     font-size: 20px;
-    padding: 10px 40vw;  
+    padding: 10px 38vw;  
+}
+
+#catalog ul img {
+    width: 50px;
+    margin: 0 10px;
 }
 
 #catalog ul a { 
     display: inline-block;
-    padding: 20px;   
-    margin: 10px 15px;
+    padding: 20px;    
     font-size: 15px;
     text-decoration: none;
 } 
@@ -287,7 +361,7 @@ h4 {
     margin-bottom: 10px;
     padding: 5px;
     min-width: 380px;
-    max-width: 3800px;
+    max-width: 380px;
     min-height: 50px;
     max-height: 100px;
 }
@@ -338,4 +412,399 @@ footer {
     color: #fff;
     padding: 10px;
     text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 700px){ 
+ 
+
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    html {
+      scroll-behavior: smooth;
+    }
+    
+    .p-estrella {
+        color: #ffd700;
+    }
+    
+    body {
+        font-family: Arial, sans-serif; 
+        background-color: #000;
+    }
+    
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
+
+    .hamburger .line {
+        width: 30px;
+        height: 3px;
+        background: #fff;
+        margin:  6px 0;
+    }
+
+    header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%; 
+        color: #fff;
+        padding: 10px;
+        z-index: 999;
+        transition: background-color .7s ease-in-out; 
+    }
+    
+    #navbar {
+        position: absolute;
+        top: 80px;
+        height: 0;
+        left: 0;
+        right: 0;
+        width: 100vw;
+        background: #000;
+        transition: .2s;
+    } 
+     
+    .navbar.active {
+        height: 450px;
+    }
+    
+    #navbar ul {
+        display: block;
+        width: fit-content;
+        margin: 80px auto 0 auto;
+        text-align: center;
+        transition: .5s;
+        opacity: 0;
+    }
+    
+    #navbar ul li {
+        margin-left: 30px;
+        font-size: 20px;
+    }
+    
+    #navbar ul li a {
+        margin-bottom: 12px;
+    }
+    
+    #navbar ul li a:hover {
+        color: #f00;
+    }
+    
+    .img-logo--nav {
+        width: 35px;
+        height: 35px; 
+        margin-right: 30px;
+    }
+    
+    section {
+        padding: 50px;
+    }
+    
+    #banner {
+        margin: 60px;  
+        color: #fff;
+        font-size: 30px; 
+        text-align: center;  
+        transition: color .4s ease-in-out; 
+        background-size: cover;
+        animation: glicht 2.3s infinite;
+    
+    }  
+    
+    #p-banner {
+        font-size: 40px;
+        animation: glicht 2.3s infinite;
+    }
+    
+    @keyframes glicht {
+        0% {
+            text-shadow: #b4cf06
+            0px 0px, 
+            #0d22da 0px 0px;
+        }
+        10% {
+            text-shadow: #f00
+            -5px 2px, 
+            #0d22da 0px 0px;
+        }
+        35% {
+            text-shadow: #f00
+            0px 0px, 
+            #0d22da 5px -2px;
+        }
+        60% {
+            text-shadow: #f00
+            0px 0px, 
+            #0d22da 0px 0px;
+        } 
+    
+        100% {
+            text-shadow: #f00
+            0px 0px, 
+            #0d22da 0px 0px;
+        } 
+    
+    }
+    
+    .img-logo--banner {
+        width: 400px; 
+        margin-top: 20px;
+    } 
+    
+    #presentacion {
+        background-color: #111;
+        font-size: 16px;
+        text-align: center; 
+        color: #666; 
+    }
+    
+    #guitarrafondo {
+        background-color: #000;
+    }
+    
+    #b-ar {
+        color: #666;
+    }
+    
+    #b-negrita {
+        color: #aaa;
+    }
+    
+    .div-pm { 
+        display: flex;
+        margin: 80px 50px;
+        border: 1px solid #f00;
+        padding: 10px; 
+        text-align: center;
+    }
+    
+    #h2-pm { 
+        display: inline-block;
+        margin: 10px; 
+        font-size: 38px;
+    }
+    
+    #h3-pm { 
+        color: #fff;
+        margin: 20px 500px 0 0;
+        padding: 10px; 
+        width: 500px; 
+    }
+    
+    #p-pm{
+        position: absolute;
+        color: #fff;
+        margin: 100px 500px 0 0;
+        padding: 10px;   
+        max-width: 500px;
+    
+    }
+    
+    #foto-pm { 
+        float: right; 
+        max-width: 500px;
+    }
+    
+    .div-pm-2 { 
+        display: flex;
+        text-align: center; 
+        border: 1px solid #f00;
+        margin: 80px 50px; 
+        padding: 10px 90px; 
+        height: 270px;
+    }
+    
+    #h3-pm-2 {
+        color: #fff;
+        margin: 20px 500px 0 0;
+        padding: 10px; 
+        width: 500px;   
+    }
+    
+    #p-pm-2 {
+        position: absolute;
+        color: #fff; 
+        float: right;   
+        width: 350px;
+        margin: 110px -300px;
+    }
+    
+    #foto-2-pm {
+        float: left;
+        max-width: 500px;
+    }
+    
+    #serviyregistro h2 {
+        display: inline-block;
+        color: #f00;
+        font-size: 35px;
+        margin: -10px 0 80px 0;
+        padding: 30px;
+        border-bottom: 1px solid #d50000;
+    }
+    
+    #container-serviyregistro {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        width: 100%;
+        margin: 0 auto;
+        color: #f00;
+    }
+    
+    #serviyregistro div div {  
+        margin: 10px;
+        padding: 10px;  
+        border: 2px solid #d50000;
+        font-size: 20px;
+    }
+     
+    
+    #h2-pm { 
+        color: #f00;
+        margin-left: 37vw;
+    }
+    
+    #h2-catalog {
+        display: flex; 
+        margin-left: 38vw;
+        margin-top: -10px;
+        height: 100px; 
+        color: #f00;
+    }
+    
+    #catalog {
+        background-color: #000;
+        color: #f00; 
+    }
+    
+    #catalog ul { 
+        padding: 0;    
+    }
+    
+    #catalog ul li {
+        margin : 10px 0;
+        border-top: 1px solid #f00; 
+        display: flex;  
+        font-size: 20px;
+        padding: 10px 40vw;  
+    }
+    
+    #catalog ul a { 
+        display: inline-block;
+        padding: 20px;   
+        margin: 10px 15px;
+        font-size: 15px;
+        text-decoration: none;
+    } 
+    
+    #contact {
+        background-color: #000;
+        color: #f00; 
+    }
+    
+    #h4-container {
+        position: absolute;
+        color: #fff;
+        margin: 10px 10px;
+    }
+    
+    h4 {
+        padding: 23px 10px;
+        font-size: 22px;
+        animation: glicht 2s infinite;
+    }
+    
+    .contact-form {
+        max-width: 400px;
+        margin: 0 auto;
+        padding-left: 20px;
+    }
+    
+    .contact-form h3 {
+        margin-bottom: 10px;
+    }
+    
+    #selecionar {
+        width: 100%;
+        margin-bottom: 10px;
+        padding: 5px;
+    }
+    
+    .contact-form form textarea {
+        width: 100%;
+        height: 50px;
+        margin-bottom: 10px;
+        padding: 5px;
+        min-width: 380px;
+        max-width: 3800px;
+        min-height: 50px;
+        max-height: 100px;
+    }
+    
+    .contact-form form button {
+        padding: 10px 20px;
+        background-color: #f00;
+        color: #fff;
+        border: none;
+        cursor: pointer;
+    }
+    
+    .contact-form form input, .contact-form form textarea {
+        width: 100%;
+        margin-bottom: 10px;
+        padding: 5px;
+    }
+    
+    .contact-form form button:hover {
+        background-color: #d50000;
+    }
+    
+    #whatsapp {
+        position: absolute; 
+        margin: -1px 30px; 
+        padding: 8px 20px;
+        text-decoration: none;
+        background-color: #04852a;
+        font-size: 17px;
+        color: #fff;
+    }
+    
+    #whatsapp:hover {
+        background-color: #006920;
+    }
+    
+    #whatsapp-icon {
+        position: absolute; 
+        margin: -10px 230px; 
+        padding: 8px 20px;
+        width: 90px;
+        border-radius: 50%;
+        rotate: 10deg; 
+    }  
+    
+    footer {
+        background-color: #000;
+        color: #fff;
+        padding: 10px;
+        text-align: center;
+    }
+    
 }
