--- a/estilo.css
+++ b/estilo.css
@@ -135,10 +135,27 @@ section {
     font-size: 16px;
     text-align: center; 
     color: #666; 
+} 
+
+#div-se {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-#guitarrafondo {
-    background-color: #000;
+#div-se img {
+    margin: 2.3rem;
+    width: 25rem;  
+    width: 45%;
+}
+
+#div-se p {
+    display: block;
+}
+
+#div-se p {
+    color: #fff;
+    height: 500px;
+    width: 100%;
 }
 
 #b-ar {
@@ -255,7 +272,7 @@ section {
     justify-content: space-around;
     width: 100%;
     margin: 0 auto;
-    color: #f00;
+    color: #666;
 }
 
 #serviyregistro div div {  
@@ -286,8 +303,8 @@ section {
     margin : 10px 0;
     border-top: 1px solid #f00; 
     display: flex;  
-    font-size: 20px;
-    padding: 10px 38vw;  
+    font-size: 1rem;
+    padding: .2rem 38vw;  
 }
 
 #catalog ul img {
@@ -297,7 +314,7 @@ section {
 
 #catalog ul a { 
     display: inline-block;
-    padding: 20px;    
+    padding: 1rem;    
     font-size: 15px;
     text-decoration: none;
 } 
@@ -403,394 +420,142 @@ footer {
 
 
 
-
-
-
-
-
-
-
-
 @media only screen and (max-width: 700px){ 
  
+     /* Estilos para dispositivos móviles */
 
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    
-    html {
-      scroll-behavior: smooth;
-    }
-    
-    .p-estrella {
-        color: #ffd700;
-    }
-    
-    body {
-        font-family: Arial, sans-serif; 
-        background-color: #000;
-    }
-    
-    .hamburger {
-        display: block;
-        cursor: pointer;
-    }
+  /* Ajustar el tamaño de fuente para dispositivos móviles */
+  body {
+    font-size: 1rem;
+  }
+  
+  /* Cambiar el tamaño del logotipo de navegación en dispositivos móviles */
+  .img-logo--nav {
+    display: none;
+  }
 
-    .hamburger .line {
-        width: 30px;
-        height: 3px;
-        background: #fff;
-        margin:  6px 0;
-    }
+  /* Estilos para el menú hamburguesa */
+  .hamburger {
+    display: block;
+    width: 30px;
+    height: 20px;
+    margin: 10px;
+    cursor: pointer;
+  }
 
-    header {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%; 
-        color: #fff;
-        padding: 10px;
-        z-index: 999;
-        transition: background-color .7s ease-in-out; 
-    }
-    
-    #navbar {
-        position: absolute;
-        top: 80px;
-        height: 0;
-        left: 0;
-        right: 0;
-        width: 100vw;
-        background: #000;
-        transition: .2s;
-    } 
-     
-    .navbar.active {
-        height: 450px;
-    }
-    
-    #navbar ul {
-        display: block;
-        width: fit-content;
-        margin: 80px auto 0 auto;
-        text-align: center;
-        transition: .5s;
-        opacity: 0;
-    }
-    
-    #navbar ul li {
-        margin-left: 30px;
-        font-size: 20px;
-    }
-    
-    #navbar ul li a {
-        margin-bottom: 12px;
-    }
-    
-    #navbar ul li a:hover {
-        color: #f00;
-    }
-    
-    .img-logo--nav {
-        width: 35px;
-        height: 35px; 
-        margin-right: 30px;
-    }
-    
-    section {
-        padding: 50px;
-    }
-    
-    #banner {
-        margin: 60px;  
-        color: #fff;
-        font-size: 30px; 
-        text-align: center;  
-        transition: color .4s ease-in-out; 
-        background-size: cover;
-        animation: glicht 2.3s infinite;
-    
-    }  
-    
-    #p-banner {
-        font-size: 40px;
-        animation: glicht 2.3s infinite;
-    }
-    
-    @keyframes glicht {
-        0% {
-            text-shadow: #b4cf06
-            0px 0px, 
-            #0d22da 0px 0px;
-        }
-        10% {
-            text-shadow: #f00
-            -5px 2px, 
-            #0d22da 0px 0px;
-        }
-        35% {
-            text-shadow: #f00
-            0px 0px, 
-            #0d22da 5px -2px;
-        }
-        60% {
-            text-shadow: #f00
-            0px 0px, 
-            #0d22da 0px 0px;
-        } 
-    
-        100% {
-            text-shadow: #f00
-            0px 0px, 
-            #0d22da 0px 0px;
-        } 
-    
-    }
-    
-    .img-logo--banner {
-        width: 400px; 
-        margin-top: 20px;
-    } 
-    
-    #presentacion {
-        background-color: #111;
-        font-size: 16px;
-        text-align: center; 
-        color: #666; 
-    }
-    
-    #guitarrafondo {
-        background-color: #000;
-    }
-    
-    #b-ar {
-        color: #666;
-    }
-    
-    #b-negrita {
-        color: #aaa;
-    }
-    
-    .div-pm { 
-        display: flex;
-        margin: 80px 50px;
-        border: 1px solid #f00;
-        padding: 10px; 
-        text-align: center;
-    }
-    
-    #h2-pm { 
-        display: inline-block;
-        margin: 10px; 
-        font-size: 38px;
-    }
-    
-    #h3-pm { 
-        color: #fff;
-        margin: 20px 500px 0 0;
-        padding: 10px; 
-        width: 500px; 
-    }
-    
-    #p-pm{
-        position: absolute;
-        color: #fff;
-        margin: 100px 500px 0 0;
-        padding: 10px;   
-        max-width: 500px;
-    
-    }
-    
-    #foto-pm { 
-        float: right; 
-        max-width: 500px;
-    }
-    
-    .div-pm-2 { 
-        display: flex;
-        text-align: center; 
-        border: 1px solid #f00;
-        margin: 80px 50px; 
-        padding: 10px 90px; 
-        height: 270px;
-    }
-    
-    #h3-pm-2 {
-        color: #fff;
-        margin: 20px 500px 0 0;
-        padding: 10px; 
-        width: 500px;   
-    }
-    
-    #p-pm-2 {
-        position: absolute;
-        color: #fff; 
-        float: right;   
-        width: 350px;
-        margin: 110px -300px;
-    }
-    
-    #foto-2-pm {
-        float: left;
-        max-width: 500px;
-    }
-    
-    #serviyregistro h2 {
-        display: inline-block;
-        color: #f00;
-        font-size: 35px;
-        margin: -10px 0 80px 0;
-        padding: 30px;
-        border-bottom: 1px solid #d50000;
-    }
-    
-    #container-serviyregistro {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        width: 100%;
-        margin: 0 auto;
-        color: #f00;
-    }
-    
-    #serviyregistro div div {  
-        margin: 10px;
-        padding: 10px;  
-        border: 2px solid #d50000;
-        font-size: 20px;
-    }
-     
-    
-    #h2-pm { 
-        color: #f00;
-        margin-left: 37vw;
-    }
-    
-    #h2-catalog {
-        display: flex; 
-        margin-left: 38vw;
-        margin-top: -10px;
-        height: 100px; 
-        color: #f00;
-    }
-    
-    #catalog {
-        background-color: #000;
-        color: #f00; 
-    }
-    
-    #catalog ul { 
-        padding: 0;    
-    }
-    
-    #catalog ul li {
-        margin : 10px 0;
-        border-top: 1px solid #f00; 
-        display: flex;  
-        font-size: 20px;
-        padding: 10px 40vw;  
-    }
-    
-    #catalog ul a { 
-        display: inline-block;
-        padding: 20px;   
-        margin: 10px 15px;
-        font-size: 15px;
-        text-decoration: none;
-    } 
-    
-    #contact {
-        background-color: #000;
-        color: #f00; 
-    }
-    
-    #h4-container {
-        position: absolute;
-        color: #fff;
-        margin: 10px 10px;
-    }
-    
-    h4 {
-        padding: 23px 10px;
-        font-size: 22px;
-        animation: glicht 2s infinite;
-    }
-    
-    .contact-form {
-        max-width: 400px;
-        margin: 0 auto;
-        padding-left: 20px;
-    }
-    
-    .contact-form h3 {
-        margin-bottom: 10px;
-    }
-    
-    #selecionar {
-        width: 100%;
-        margin-bottom: 10px;
-        padding: 5px;
-    }
-    
-    .contact-form form textarea {
-        width: 100%;
-        height: 50px;
-        margin-bottom: 10px;
-        padding: 5px;
-        min-width: 380px;
-        max-width: 3800px;
-        min-height: 50px;
-        max-height: 100px;
-    }
-    
-    .contact-form form button {
-        padding: 10px 20px;
-        background-color: #f00;
-        color: #fff;
-        border: none;
-        cursor: pointer;
-    }
-    
-    .contact-form form input, .contact-form form textarea {
-        width: 100%;
-        margin-bottom: 10px;
-        padding: 5px;
-    }
-    
-    .contact-form form button:hover {
-        background-color: #d50000;
-    }
-    
-    #whatsapp {
-        position: absolute; 
-        margin: -1px 30px; 
-        padding: 8px 20px;
-        text-decoration: none;
-        background-color: #04852a;
-        font-size: 17px;
-        color: #fff;
-    }
-    
-    #whatsapp:hover {
-        background-color: #006920;
-    }
-    
-    #whatsapp-icon {
-        position: absolute; 
-        margin: -10px 230px; 
-        padding: 8px 20px;
-        width: 90px;
-        border-radius: 50%;
-        rotate: 10deg; 
-    }  
-    
-    footer {
-        background-color: #000;
-        color: #fff;
-        padding: 10px;
-        text-align: center;
-    }
+  .line {
+    width: 100%;
+    height: 2px;
+    background-color: #000;
+    margin-bottom: 5px;
+  }
+
+  /* Ocultar el menú por defecto */
+  #navbar ul {
+    display: none;
+  }
+
+  /* Mostrar el menú cuando se hace clic en el ícono de hamburguesa */
+  #navbar ul .show {
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    color:#FFF;
+    background-color: #fff;
+    width: 100%;
+    z-index: 1000;
+  }
+
+  /* Estilos para los elementos del menú */
+  #navbar ul li {
+    width: 100%;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+  }
+
+  /* Cambiar el color del texto al hacer clic en un enlace */
+  #navbar ul li a:active,
+  #navbar ul li a:focus {
+    color: #f00;
+  }
+  
+  /* Alinear el texto del banner en dispositivos móviles */
+  #h1 {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  
+  #p-banner {
+    font-size: 1rem;
+    display: flex;
+    width: 100%;
+    text-align: center;
+  }
+
+  #banner img {
+    width: 100%;
+  }
+  
+  /* Alinear el texto de presentación en dispositivos móviles */
+  #presentacion p {
+    margin: -1.5rem;
+    padding: 2px;
+    text-align: justify;
+    font-size: .7rem;
+    width: 100%;
+  }
+  
+  /* Ajustar el tamaño de las imágenes en la sección de sala de ensayo en dispositivos móviles */
+  #div-se img {
+    width: 100%;
+    height: auto;
+  }
+  
+  /* Ajustar el tamaño de fuente para dispositivos móviles en la sección de producción musical */
+  #h2-pm,
+  #h3-pm,
+  #p-pm,
+  #p-pm-2 {
+    font-size: .7rem;
+  }
+  
+  /* Ajustar el tamaño de fuente para dispositivos móviles en la sección de producción audiovisual */
+  #h2-pa,
+  #h3-pa,
+  #p-pa,
+  #h3-pa-2,
+  #p-pa-2,
+  #h3-pa-3,
+  #p-pa-3 {
+    font-size: .7rem;
+  }
+  
+  /* Ajustar el tamaño de fuente para dispositivos móviles en la sección de servicios y registros */
+  #h2-registro,
+  #p-registro {
+    font-size: .7rem;
+  }
+  
+  /* Ajustar el tamaño de fuente para dispositivos móviles en el catálogo */
+  #h2-catalog,
+  #catalog ul li {
+    font-size: .7rem;
+  }
+  
+  /* Ajustar el tamaño de las imágenes en el catálogo en dispositivos móviles */
+  #catalog {
+    width: 100%;
+    height: 20px;
+  }
+
+  #contact {
+    display: none;
+  }
+
+  #footer {
+    display: none;
+  }
+  
     
 }
