--- a/estilo.css
+++ b/estilo.css
@@ -420,11 +420,11 @@ footer {
 
 
 
-@media only screen and (max-width: 700px){ 
+@media only screen and (max-width: 700px){
  
-     /* Estilos para dispositivos móviles */
-
-  /* Ajustar el tamaño de fuente para dispositivos móviles */
+    * {
+        max-width: 100vw;
+    }
   body {
     font-size: 1rem;
   }
