--- a/estilo.css
+++ b/estilo.css
@@ -136,11 +136,11 @@
  #div-se {
      display: flex;
      flex-wrap: wrap;
- } 
+ }
 
 
  #bata_movile {
-    display: none;
+     display: none;
  }
 
  .slider {
@@ -247,7 +247,7 @@
 
  #p-pm-2 {
      color: #fff;
-     padding: 1.7rem;
+     padding: 1rem;
      text-align: center;
  }
 
@@ -265,57 +265,60 @@
  }
 
  #div-pa p {
-    position: absolute;
-    width: 25%;  
-    margin: 19rem 1rem 1rem 1rem;
+     position: absolute;
+     width: 25%;
+     margin: 19rem 1rem 1rem 1rem;
+     text-align: center;
  }
 
  #div-pa-2 p {
-    position: absolute;
-    width: 25%;
-    margin: 1rem;
+     position: absolute;
+     width: 25%;
+     margin: 1rem;
+     text-align: center;
  }
 
  #div-pa-3 p {
-    position: absolute;
-    width: 25%;
-    margin: 19rem 1rem 1rem 1rem;
+     position: absolute;
+     width: 25%;
+     margin: 19rem 1rem 1rem 1rem;
+     text-align: center;
  }
 
  #div-pa {
      color: #fff;
      border: 1px solid #d50000;
-     margin: 25px; 
+     margin: 25px;
      width: 30%;
  }
 
  #div-pa-2 {
      color: #fff;
      border: 1px solid #d50000;
-     margin: 25px; 
+     margin: 25px;
      width: 30%;
  }
 
  #div-pa-3 {
      color: #fff;
      border: 1px solid #d50000;
-     margin: 25px; 
+     margin: 25px;
      width: 30%;
  }
 
  #div-pa img {
-    width: 90%;
-    margin: 1rem 1rem 10rem 1rem;
+     width: 90%;
+     margin: 1rem 1rem 10rem 1rem;
  }
 
  #div-pa-2 img {
-    width: 90%;
-    margin: 10rem 1rem 1rem 1rem;
+     width: 90%;
+     margin: 10rem 1rem 1rem 1rem;
  }
 
  #div-pa-3 img {
-    width: 90%;
-    margin: 1rem 1rem 10rem 1rem;
+     width: 90%;
+     margin: 1rem 1rem 10rem 1rem;
  }
 
  #serviyregistro h2 {
@@ -385,9 +388,22 @@
      color: #f00;
  }
 
+ #h2-contact {
+    position: absolute;
+    margin: 1rem 0 0 54rem;
+    font-size: 3rem;
+ }
+
+ .ggmaps {
+    margin: 0 0 0 2rem;
+    padding: 3px;
+    border: 3px solid #d50000;
+ }
+
  #h4-container {
+    position: absolute;
      color: #fff;
-     margin: 10px 10px;
+     margin: -20rem 0 10px 50rem;
  }
 
  h4 {
@@ -397,17 +413,17 @@
  }
 
  .contact-form {
-     max-width: 400px;
-     margin: 0 auto;
+     max-width: 100px; 
      padding-left: 20px;
  }
 
  #whatsapp {
-     margin: 0 30px;
+     position: absolute;
+     margin: 0rem 0 0 60rem;
      padding: 8px 20px;
      text-decoration: none;
      background-color: #04852a;
-     font-size: 2rem;
+     font-size: 1.5rem;
      color: #fff;
  }
 
@@ -416,7 +432,9 @@
  }
 
  #whatsapp-icon {
-     width: 90px;
+    position: absolute;
+    margin: -.5rem 0 0 55rem;
+     width: 67px;
      border-radius: 50%;
      transition: 1s all;
  }
@@ -513,13 +531,14 @@
      }
 
      .slider {
-        display: none; 
-     } 
-
-     #bata_movile { 
-        display: block;
-        margin: 1rem 1rem -1rem 1rem;
+         display: none;
      }
+
+     #bata_movile {
+         display: block;
+         margin: 1rem 1rem -1rem 1rem;
+     }
+
      /* Alinear el texto de presentación en dispositivos móviles */
      #presentacion p {
          margin: -1.5rem;
